[gd_scene load_steps=2 format=3 uid="uid://b5wx13gnrvq72"]

[ext_resource type="Script" path="res://Game/Scripts/Ui/Cheat Menu.gd" id="1_4idvs"]

[node name="Cheat Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4idvs")

[node name="Gold label" type="Label" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 192.0
offset_right = 1152.0
offset_bottom = 320.0
text = "Gold:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hundred" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 384.0
offset_right = 512.0
offset_bottom = 512.0
text = "$100"

[node name="Five Hundred" type="Button" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 384.0
offset_right = 1152.0
offset_bottom = 512.0
text = "$500"

[node name="Thousand" type="Button" parent="."]
layout_mode = 0
offset_left = 1408.0
offset_top = 384.0
offset_right = 1792.0
offset_bottom = 512.0
text = "$1,000"

[node name="Ten Thousand" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 640.0
offset_right = 512.0
offset_bottom = 768.0
text = "$10,000"

[node name="Fifty Thousand" type="Button" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 640.0
offset_right = 1152.0
offset_bottom = 768.0
text = "$50,000"

[node name="Hundred Thousand" type="Button" parent="."]
layout_mode = 0
offset_left = 1408.0
offset_top = 640.0
offset_right = 1792.0
offset_bottom = 768.0
text = "$100,000"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 896.0
offset_right = 1152.0
offset_bottom = 1024.0
text = "Exit"

[connection signal="pressed" from="Hundred" to="." method="_on_hundred_pressed"]
[connection signal="pressed" from="Five Hundred" to="." method="_on_five_hundred_pressed"]
[connection signal="pressed" from="Thousand" to="." method="_on_thousand_pressed"]
[connection signal="pressed" from="Ten Thousand" to="." method="_on_ten_thousand_pressed"]
[connection signal="pressed" from="Fifty Thousand" to="." method="_on_fifty_thousand_pressed"]
[connection signal="pressed" from="Hundred Thousand" to="." method="_on_hundred_thousand_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
